import React from 'react';
import felaSnapshotter from '../../../../test-helpers/felaSnapshotter';
import IconFacebookLogo from '../IconFacebookLogo';

describe('<IconFacebookLogo />', () => {
  describe('Errors', () => {
    it('throw an error when the value passed to the "size" prop isn\'t a number', () => {
      expect(() => felaSnapshotter(<IconFacebookLogo size="2rem" />)).toThrow(
        /^An Icon's "size" prop may only be passed a "number"/
      );
    });
    it('throw an error when the value passed to the "color" prop isn\'t a named color (string)', () => {
      expect(() => felaSnapshotter(<IconFacebookLogo color="red" />)).toThrow(
        /is not a named-color/
      );
    });
    it('throw an error when the value passed to the "color" prop isn\'t a named color (array of strings)', () => {
      expect(() =>
        felaSnapshotter(<IconFacebookLogo color={[ 'primary', 'nope', ]} />)
      ).toThrow(/is not a named-color/);
    });
    it('throw an error when the value passed to the "fill" prop isn\'t a named color (string)', () => {
      expect(() => felaSnapshotter(<IconFacebookLogo fill="red" />)).toThrow(
        /is not a named-color/
      );
    });
    it('throw an error when the value passed to the "fill" prop isn\'t a named color (array of strings)', () => {
      expect(() =>
        felaSnapshotter(<IconFacebookLogo fill={[ 'primary', 'nope', ]} />)
      ).toThrow(/is not a named-color/);
    });
  });
  describe('DOM element', () => {
    testCase('render correctly when no props are passed', <IconFacebookLogo />);
    testCase(
      'pass attributes defined in the "attrs" prop to the DOM element',
      <IconFacebookLogo attrs={{ 'aria-hidden': true, }} />
    );
    testCase(
      'add "id" attribute to DOM element',
      <IconFacebookLogo id="hasId" />
    );
    testCase(
      'add "onClick" attribute to DOM element',
      <IconFacebookLogo id={e => console.log('a')} />
    );
  });

  describe('styles', () => {
    testCase(
      "set icon's color",
      <IconFacebookLogo color={[ 'primary', 'base', ]} />
    );
    testCase(
      "set icon's color responsively",
      <IconFacebookLogo
        color={[
          { until: 'xl', value: [ 'primary', 'base', ], },
          { from: 'xl', value: [ 'bodyText', 'base', ], },
        ]}
      />
    );
    testCase(
      "set icon's fill",
      <IconFacebookLogo fill={[ 'primary', 'base', ]} />
    );
    testCase(
      "set icon's fill responsively",
      <IconFacebookLogo
        fill={[
          { until: 'xl', value: [ 'primary', 'base', ], },
          { from: 'xl', value: [ 'bodyText', 'base', ], },
        ]}
      />
    );
    testCase("set icon's size", <IconFacebookLogo size={6} />);
    testCase(
      "set icon's size responsively",
      <IconFacebookLogo
        size={[ { until: 'xl', value: 6, }, { from: 'xl', value: 7, }, ]}
      />
    );
    testCase(
      'set misc styles on an icon',
      <IconFacebookLogo miscStyles={{ position: 'relative', }} />
    );
    testCase(
      'responsively set misc styles on an icon',
      <IconFacebookLogo
        miscStyles={{
          position: [
            { until: 'xl', value: 'relative', },
            { from: 'xl', value: 'static', },
          ],
        }}
      />
    );
  });
});

function testCase(name, Component, { only = false, } = {}) {
  const testFunc = only ? it.only : it;
  testFunc(name, () => {
    const { component, styles, } = felaSnapshotter(Component);
    expect(component).toMatchSnapshot();
    expect(styles).toMatchSnapshot();
  });
}
