// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconFacebookLogo /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M233.4 8H23.7C15.1 8 8 15.1 8 23.9v207.8c0 8.9 7.2 16.3 16 16.3h116v-94h-23v-36h23V91.9c0-17.3 6.9-43.9 42-43.9h31v35h-24c-3.8 0-8 2.9-8 11.2V118h32l-4 36h-28v94h54c6.8 0 13-4.6 13-11.5V22.8c0-8.1-6.6-14.8-14.6-14.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconFacebookLogo /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M233.4 8H23.7C15.1 8 8 15.1 8 23.9v207.8c0 8.9 7.2 16.3 16 16.3h116v-94h-23v-36h23V91.9c0-17.3 6.9-43.9 42-43.9h31v35h-24c-3.8 0-8 2.9-8 11.2V118h32l-4 36h-28v94h54c6.8 0 13-4.6 13-11.5V22.8c0-8.1-6.6-14.8-14.6-14.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconFacebookLogo /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M233.4 8H23.7C15.1 8 8 15.1 8 23.9v207.8c0 8.9 7.2 16.3 16 16.3h116v-94h-23v-36h23V91.9c0-17.3 6.9-43.9 42-43.9h31v35h-24c-3.8 0-8 2.9-8 11.2V118h32l-4 36h-28v94h54c6.8 0 13-4.6 13-11.5V22.8c0-8.1-6.6-14.8-14.6-14.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconFacebookLogo /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M233.4 8H23.7C15.1 8 8 15.1 8 23.9v207.8c0 8.9 7.2 16.3 16 16.3h116v-94h-23v-36h23V91.9c0-17.3 6.9-43.9 42-43.9h31v35h-24c-3.8 0-8 2.9-8 11.2V118h32l-4 36h-28v94h54c6.8 0 13-4.6 13-11.5V22.8c0-8.1-6.6-14.8-14.6-14.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconFacebookLogo /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M233.4 8H23.7C15.1 8 8 15.1 8 23.9v207.8c0 8.9 7.2 16.3 16 16.3h116v-94h-23v-36h23V91.9c0-17.3 6.9-43.9 42-43.9h31v35h-24c-3.8 0-8 2.9-8 11.2V118h32l-4 36h-28v94h54c6.8 0 13-4.6 13-11.5V22.8c0-8.1-6.6-14.8-14.6-14.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 80em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconFacebookLogo /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M233.4 8H23.7C15.1 8 8 15.1 8 23.9v207.8c0 8.9 7.2 16.3 16 16.3h116v-94h-23v-36h23V91.9c0-17.3 6.9-43.9 42-43.9h31v35h-24c-3.8 0-8 2.9-8 11.2V118h32l-4 36h-28v94h54c6.8 0 13-4.6 13-11.5V22.8c0-8.1-6.6-14.8-14.6-14.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconFacebookLogo /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M233.4 8H23.7C15.1 8 8 15.1 8 23.9v207.8c0 8.9 7.2 16.3 16 16.3h116v-94h-23v-36h23V91.9c0-17.3 6.9-43.9 42-43.9h31v35h-24c-3.8 0-8 2.9-8 11.2V118h32l-4 36h-28v94h54c6.8 0 13-4.6 13-11.5V22.8c0-8.1-6.6-14.8-14.6-14.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 80em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconFacebookLogo /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M233.4 8H23.7C15.1 8 8 15.1 8 23.9v207.8c0 8.9 7.2 16.3 16 16.3h116v-94h-23v-36h23V91.9c0-17.3 6.9-43.9 42-43.9h31v35h-24c-3.8 0-8 2.9-8 11.2V118h32l-4 36h-28v94h54c6.8 0 13-4.6 13-11.5V22.8c0-8.1-6.6-14.8-14.6-14.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconFacebookLogo /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M233.4 8H23.7C15.1 8 8 15.1 8 23.9v207.8c0 8.9 7.2 16.3 16 16.3h116v-94h-23v-36h23V91.9c0-17.3 6.9-43.9 42-43.9h31v35h-24c-3.8 0-8 2.9-8 11.2V118h32l-4 36h-28v94h54c6.8 0 13-4.6 13-11.5V22.8c0-8.1-6.6-14.8-14.6-14.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 80em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconFacebookLogo /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M233.4 8H23.7C15.1 8 8 15.1 8 23.9v207.8c0 8.9 7.2 16.3 16 16.3h116v-94h-23v-36h23V91.9c0-17.3 6.9-43.9 42-43.9h31v35h-24c-3.8 0-8 2.9-8 11.2V118h32l-4 36h-28v94h54c6.8 0 13-4.6 13-11.5V22.8c0-8.1-6.6-14.8-14.6-14.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconFacebookLogo /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M233.4 8H23.7C15.1 8 8 15.1 8 23.9v207.8c0 8.9 7.2 16.3 16 16.3h116v-94h-23v-36h23V91.9c0-17.3 6.9-43.9 42-43.9h31v35h-24c-3.8 0-8 2.9-8 11.2V118h32l-4 36h-28v94h54c6.8 0 13-4.6 13-11.5V22.8c0-8.1-6.6-14.8-14.6-14.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 80em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconFacebookLogo /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M233.4 8H23.7C15.1 8 8 15.1 8 23.9v207.8c0 8.9 7.2 16.3 16 16.3h116v-94h-23v-36h23V91.9c0-17.3 6.9-43.9 42-43.9h31v35h-24c-3.8 0-8 2.9-8 11.2V118h32l-4 36h-28v94h54c6.8 0 13-4.6 13-11.5V22.8c0-8.1-6.6-14.8-14.6-14.8z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconFacebookLogo /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
